Initial config descriptions and install

--- a/index.html
+++ b/index.html
@@ -4,7 +4,24 @@ toc: true
 post_style: page
 ---
 
-<p>Demo website</p>
+<h1>Lazyman Supported LazyVim Neovim Configurations</h1>
+<p>
+  The following are <a href="https://lazyman.dev/">Lazyman</a> supported
+  LazyVim based Neovim configurations:
+</p>
+<ul>
+  <li><a href="https://lazyvim.lazyman.dev/posts/LazyVim">LazyVim</a></li>
+  <li><a href="https://lazyvim.lazyman.dev/posts/Barebones">Barebones</a></li>
+  <li><a href="https://lazyvim.lazyman.dev/posts/CatNvim">CatNvim</a></li>
+  <li><a href="https://lazyvim.lazyman.dev/posts/Elijah">Elijah</a></li>
+  <li><a href="https://lazyvim.lazyman.dev/posts/JustinNvim">JustinNvim</a></li>
+  <li><a href="https://lazyvim.lazyman.dev/posts/JustinOhMy">JustinOhMy</a></li>
+  <li><a href="https://lazyvim.lazyman.dev/posts/LazyIde">LazyIde</a></li>
+  <li><a href="https://lazyvim.lazyman.dev/posts/Nv">Nv</a></li>
+  <li><a href="https://lazyvim.lazyman.dev/posts/Penguin">Penguin</a></li>
+  <li><a href="https://lazyvim.lazyman.dev/posts/Traap">Traap</a></li>
+  <li><a href="https://lazyvim.lazyman.dev/posts/Webdev">Webdev</a></li>
+</ul>
 
 <div align="center">
   <h2 id="connect">Connect</h2>
