Add Lazyman tab redirect

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 ---
 layout: post
-toc: true
+toc: false
 post_style: page
 ---
 
 <h1>Lazyman Supported LazyVim Neovim Configurations</h1>
 <p>
-  The following are <a href="https://lazyman.dev/">Lazyman</a> supported
-  LazyVim based Neovim configurations:
+  The following are <a href="https://lazyman.dev/">Lazyman</a> supported LazyVim
+  based Neovim configurations:
 </p>
 <ul>
   <li><a href="https://lazyvim.lazyman.dev/posts/LazyVim">LazyVim</a></li>
